--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "@types/node": "^12.20.37",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "cytoscape": "^3.20.0",
+    "cytoscape-layers": "^2.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flow-renderer": "^9.7.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.5.2",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "y-webrtc": "^10.2.2",
+    "yjs": "^13.5.22"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/cytoscape": "^3.19.2"
   }
 }
