--- a/package.json
+++ b/package.json
@@ -14,17 +14,20 @@
     "cytoscape-layers": "^2.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-flow-renderer": "^9.7.0",
-    "react-scripts": "4.0.3",
+    "react-draggable": "^4.4.4",
+    "react-resizable": "^3.0.4",
+    "react-scripts": "5.0.0",
     "typescript": "^4.5.2",
     "web-vitals": "^1.1.2",
     "y-webrtc": "^10.2.2",
-    "yjs": "^13.5.22"
+    "yjs": "^13.5.22",
+    "zustand": "^3.6.7"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "lint": "eslint .",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -46,6 +49,15 @@
     ]
   },
   "devDependencies": {
-    "@types/cytoscape": "^3.19.2"
+    "@types/cytoscape": "^3.19.2",
+    "@types/react-resizable": "^1.7.4",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
+    "autoprefixer": "^10.4.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "postcss": "^8.4.5",
+    "prettier": "^2.5.1",
+    "tailwindcss": "^3.0.2"
   }
 }
