add attribute edit panel
add random name generator
add user info panel
add more drag resize box prop
add control bar
update typing

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": [
-    "prettier",
+    "plugin:prettier/recommended",
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended"
@@ -8,12 +8,12 @@
   "parser": "@typescript-eslint/parser",
   "plugins": ["prettier", "@typescript-eslint"],
   "parserOptions": {
-    "ecmaVersion": 2017,
+    "ecmaVersion": 2021,
     "sourceType": "module"
   },
   "ignorePatterns": "node_modules/*",
   "rules": {
-    "indent": ["error", 2],
+    "indent": ["error", 2, { "SwitchCase": 1 }],
     "linebreak-style": ["error", "unix"],
     "quotes": ["warn", "double"],
     "no-console": "warn",
