--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
+    "react-hook-form": "^7.22.5",
     "react-resizable": "^3.0.4",
     "react-scripts": "5.0.0",
+    "react-window": "^1.8.6",
     "typescript": "^4.5.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2",
     "y-webrtc": "^10.2.2",
     "yjs": "^13.5.22",
@@ -51,6 +54,8 @@
   "devDependencies": {
     "@types/cytoscape": "^3.19.2",
     "@types/react-resizable": "^1.7.4",
+    "@types/react-window": "^1.8.5",
+    "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "autoprefixer": "^10.4.0",
