impl node attributes panel(editor)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
       {
         "vars": "all",
         "args": "after-used",
+        "argsIgnorePattern": "^_",
         "ignoreRestSiblings": false
       }
     ],
