--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.11",
     "cytoscape": "^3.20.0",
     "cytoscape-layers": "^2.2.0",
+    "immer": "^9.0.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
@@ -23,6 +24,7 @@
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2",
     "y-webrtc": "^10.2.2",
+    "y-websocket": "^1.3.18",
     "yjs": "^13.5.22",
     "zustand": "^3.6.7"
   },
