--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.6",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -12,7 +14,9 @@
     "@types/react-dom": "^17.0.11",
     "cytoscape": "^3.20.0",
     "cytoscape-layers": "^2.2.0",
+    "dompurify": "^2.3.6",
     "immer": "^9.0.12",
+    "ramda": "^0.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
@@ -20,6 +24,7 @@
     "react-resizable": "^3.0.4",
     "react-scripts": "5.0.0",
     "react-window": "^1.8.6",
+    "source-map-explorer": "^2.5.2",
     "typescript": "^4.5.2",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2",
@@ -29,6 +34,7 @@
     "zustand": "^3.6.7"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -55,6 +61,7 @@
   },
   "devDependencies": {
     "@types/cytoscape": "^3.19.2",
+    "@types/ramda": "^0.28.1",
     "@types/react-resizable": "^1.7.4",
     "@types/react-window": "^1.8.5",
     "@types/uuid": "^8.3.3",
