--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/cytoscape-edgehandles": "^4.0.0",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.37",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "cytoscape": "^3.20.0",
+    "cytoscape-edgehandles": "^4.0.1",
     "cytoscape-layers": "^2.2.0",
     "dompurify": "^2.3.6",
     "immer": "^9.0.12",
@@ -29,8 +31,8 @@
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2",
     "y-webrtc": "^10.2.2",
-    "y-websocket": "^1.3.18",
-    "yjs": "^13.5.22",
+    "y-websocket": "^1.4.0",
+    "yjs": "^13.5.32",
     "zustand": "^3.6.7"
   },
   "scripts": {
