--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     "@types/cytoscape-edgehandles": "^4.0.0",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.37",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
     "cytoscape": "^3.20.0",
     "cytoscape-edgehandles": "^4.0.1",
+    "cytoscape-fcose": "^2.1.0",
     "cytoscape-layers": "^2.2.0",
     "dompurify": "^2.3.6",
     "immer": "^9.0.12",
     "ramda": "^0.28.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-draggable": "^4.4.4",
     "react-hook-form": "^7.22.5",
     "react-resizable": "^3.0.4",
