rewrite node attribute system
rewrite ndoe types
replace uuid with nanoid

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cytoscape-layout-utilities": "^1.1.1",
     "dompurify": "^2.3.6",
     "immer": "^9.0.12",
+    "nanoid": "^3.3.2",
     "ramda": "^0.28.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -30,7 +31,6 @@
     "react-window": "^1.8.6",
     "source-map-explorer": "^2.5.2",
     "typescript": "^4.5.2",
-    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2",
     "y-webrtc": "^10.2.2",
     "y-websocket": "^1.4.0",
