--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,15 +6,26 @@
     "plugin:prettier/recommended"
   ],
   "parser": "@typescript-eslint/parser",
-  "plugins": ["prettier", "@typescript-eslint"],
+  "plugins": [
+    "prettier",
+    "@typescript-eslint"
+  ],
   "parserOptions": {
     "ecmaVersion": 2021,
     "sourceType": "module"
   },
   "ignorePatterns": "node_modules/*",
   "rules": {
-    "linebreak-style": ["error", "unix"],
-    "quotes": ["warn", "double"],
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
+    "quotes": [
+      "warn",
+      "double"
+    ],
     "no-console": "warn",
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": [
