transform window UI overhaul(previous named panel)
reformat some file
rename file and variable
clean up unused code
now with pnpm :D

--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-syntax-flow": "^7.14.5",
     "@floating-ui/react-dom": "^0.6.1",
     "@floating-ui/react-dom-interactions": "^0.0.15",
-    "@headlessui/react": "^1.5.0",
+    "@headlessui/react": "0.0.0-insiders.b4a4e0b",
     "@heroicons/react": "^1.0.6",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
@@ -14,13 +15,14 @@
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.37",
     "@types/react": "^17.0.43",
-    "@types/react-dom": "^17.0.14",
+    "@types/react-dom": "^17.0.15",
     "cytoscape": "^3.20.0",
     "cytoscape-edgehandles": "^4.0.1",
     "cytoscape-fcose": "^2.1.0",
     "cytoscape-layers": "^2.2.0",
     "cytoscape-layout-utilities": "^1.1.1",
     "dompurify": "^2.3.6",
+    "eslint": "^8.13.0",
     "immer": "^9.0.12",
     "nanoid": "^3.3.2",
     "ramda": "^0.28.0",
@@ -34,6 +36,7 @@
     "source-map-explorer": "^2.5.2",
     "typescript": "^4.5.2",
     "web-vitals": "^1.1.2",
+    "y-protocols": "^1.0.5",
     "y-webrtc": "^10.2.2",
     "y-websocket": "^1.4.0",
     "yjs": "^13.5.32",
@@ -66,10 +69,14 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-0",
+    "@babel/plugin-transform-react-jsx": "^7.17.3",
+    "@testing-library/dom": "^8.13.0",
     "@types/cytoscape": "^3.19.2",
     "@types/ramda": "^0.28.1",
     "@types/react-resizable": "^1.7.4",
     "@types/react-window": "^1.8.5",
+    "@types/testing-library__jest-dom": "^5.14.3",
     "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
