add github page deploy action

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ignorance",
   "version": "0.1.0",
+  "homepage": "/ignorance",
   "private": true,
   "dependencies": {
     "@babel/plugin-syntax-flow": "^7.14.5",
