--- a/package.json
+++ b/package.json
@@ -4,44 +4,44 @@
   "homepage": "/ignorance",
   "private": true,
   "dependencies": {
-    "@babel/plugin-syntax-flow": "^7.14.5",
-    "@floating-ui/react-dom": "^0.6.1",
-    "@floating-ui/react-dom-interactions": "^0.0.15",
-    "@headlessui/react": "0.0.0-insiders.b4a4e0b",
+    "@babel/plugin-syntax-flow": "^7.18.6",
+    "@floating-ui/react-dom": "^0.7.2",
+    "@floating-ui/react-dom-interactions": "^0.7.0",
+    "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
-    "@testing-library/jest-dom": "^5.15.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.5",
     "@types/cytoscape-edgehandles": "^4.0.0",
     "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.37",
-    "@types/react": "^17.0.43",
-    "@types/react-dom": "^17.0.15",
-    "cytoscape": "^3.20.0",
+    "@types/node": "^18.0.4",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "cytoscape": "^3.22.1",
     "cytoscape-edgehandles": "^4.0.1",
     "cytoscape-fcose": "^2.1.0",
     "cytoscape-layers": "^2.2.0",
     "cytoscape-layout-utilities": "^1.1.1",
-    "dompurify": "^2.3.6",
-    "eslint": "^8.13.0",
-    "immer": "^9.0.12",
-    "nanoid": "^3.3.2",
+    "dompurify": "^2.3.9",
+    "eslint": "^8.19.0",
+    "immer": "^9.0.15",
+    "nanoid": "^4.0.0",
     "ramda": "^0.28.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-draggable": "^4.4.4",
-    "react-hook-form": "^7.22.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
+    "react-hook-form": "^7.33.1",
     "react-merge-refs": "^1.1.0",
     "react-resizable": "^3.0.4",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "source-map-explorer": "^2.5.2",
-    "typescript": "^4.5.2",
+    "typescript": "^4.7.4",
     "web-vitals": "^1.1.2",
     "y-protocols": "^1.0.5",
-    "y-webrtc": "^10.2.2",
-    "y-websocket": "^1.4.0",
-    "yjs": "^13.5.32",
-    "zustand": "^3.6.7"
+    "y-webrtc": "^10.2.3",
+    "y-websocket": "^1.4.3",
+    "yjs": "^13.5.39",
+    "zustand": "^3.7.2"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
@@ -70,22 +70,22 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-0",
-    "@babel/plugin-transform-react-jsx": "^7.17.3",
-    "@testing-library/dom": "^8.13.0",
-    "@types/cytoscape": "^3.19.2",
-    "@types/ramda": "^0.28.1",
+    "@babel/core": "^7.18.6",
+    "@babel/plugin-transform-react-jsx": "^7.18.6",
+    "@testing-library/dom": "^8.16.0",
+    "@types/cytoscape": "^3.19.6",
+    "@types/ramda": "^0.28.15",
     "@types/react-resizable": "^1.7.4",
     "@types/react-window": "^1.8.5",
-    "@types/testing-library__jest-dom": "^5.14.3",
-    "@types/uuid": "^8.3.3",
-    "@typescript-eslint/eslint-plugin": "^5.6.0",
-    "@typescript-eslint/parser": "^5.6.0",
-    "autoprefixer": "^10.4.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "postcss": "^8.4.5",
-    "prettier": "^2.5.1",
-    "tailwindcss": "^3.0.2"
+    "@types/testing-library__jest-dom": "^5.14.5",
+    "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
+    "autoprefixer": "^10.4.7",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.1.6"
   }
 }
