refactor moving some state to jotai
code still ugly af.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dompurify": "^2.3.9",
     "eslint": "^8.19.0",
     "immer": "^9.0.15",
+    "jotai": "^1.7.5",
     "memoizee": "^0.4.15",
     "nanoid": "^4.0.0",
     "ramda": "^0.28.0",
