UI Overhual(again...
refactor
better variable naming
remove unused package

--- a/package.json
+++ b/package.json
@@ -29,12 +29,11 @@
     "memoizee": "^0.4.15",
     "nanoid": "^4.0.0",
     "ramda": "^0.28.0",
+    "rc-dock": "^3.2.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-draggable": "^4.4.5",
     "react-hook-form": "^7.33.1",
     "react-merge-refs": "^1.1.0",
-    "react-resizable": "^3.0.4",
     "react-scripts": "^5.0.1",
     "source-map-explorer": "^2.5.2",
     "typescript": "^4.7.4",
@@ -78,8 +77,6 @@
     "@types/cytoscape": "^3.19.6",
     "@types/memoizee": "^0.4.8",
     "@types/ramda": "^0.28.15",
-    "@types/react-resizable": "^1.7.4",
-    "@types/react-window": "^1.8.5",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
