--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "@heroicons/react": "^1.0.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.2.5",
+    "@testing-library/user-event": "^14.3.0",
     "@types/cytoscape-edgehandles": "^4.0.0",
     "@types/jest": "^26.0.24",
-    "@types/node": "^18.0.5",
+    "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "cytoscape": "^3.22.1",
@@ -22,13 +22,14 @@
     "cytoscape-fcose": "^2.1.0",
     "cytoscape-layers": "^2.2.0",
     "cytoscape-layout-utilities": "^1.1.1",
-    "dompurify": "^2.3.9",
-    "eslint": "^8.19.0",
+    "dompurify": "^2.3.10",
+    "eslint": "^8.20.0",
     "immer": "^9.0.15",
-    "jotai": "^1.7.5",
+    "jotai": "^1.7.6",
+    "less": "^4.1.3",
+    "less-watch-compiler": "^1.16.3",
     "memoizee": "^0.4.15",
     "nanoid": "^4.0.0",
-    "ramda": "^0.28.0",
     "rc-dock": "^3.2.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -42,10 +43,12 @@
     "y-webrtc": "^10.2.3",
     "y-websocket": "^1.4.3",
     "yjs": "^13.5.39",
-    "zustand": "^4.0.0-rc.1"
+    "zustand": "^4.0.0-rc.4"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
+    "watch-css": "less-watch-compiler src/assests/style src/assests/style",
+    "build-css": "lessc src/assets/less/index-light.less src/assets/css/rc-dock.css && lessc src/assets/less/index-dark.less src/assets/css/rc-dock-dark.css && lessc src/assets/less/index-all.less src/assets/css/rc-dock-all.css",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -71,15 +74,14 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.18.6",
+    "@babel/core": "^7.18.9",
     "@babel/plugin-transform-react-jsx": "^7.18.6",
     "@testing-library/dom": "^8.16.0",
     "@types/cytoscape": "^3.19.6",
     "@types/memoizee": "^0.4.8",
-    "@types/ramda": "^0.28.15",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "^5.30.6",
-    "@typescript-eslint/parser": "^5.30.6",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
     "autoprefixer": "^10.4.7",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
