--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "y-webrtc": "^10.2.3",
     "y-websocket": "^1.4.3",
     "yjs": "^13.5.39",
-    "zustand": "^4.0.0-rc.4"
+    "zustand": "^4.0.0-rc.4",
+    "cytoscape-grid-guide": "^2.3.3"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
