--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@types/react-dom": "^18.0.6",
     "clsx": "^1.2.1",
     "cytoscape": "^3.22.1",
+    "cytoscape-compound-drag-and-drop": "^1.1.0",
     "cytoscape-edgehandles": "^4.0.1",
     "cytoscape-fcose": "^2.1.0",
+    "cytoscape-grid-guide": "^2.3.3",
     "cytoscape-layers": "^2.2.0",
     "cytoscape-layout-utilities": "^1.1.1",
+    "cytoscape-navigator": "^2.0.2",
     "dompurify": "^2.3.10",
     "eslint": "^8.20.0",
     "immer": "^9.0.15",
@@ -32,25 +35,26 @@
     "memoizee": "^0.4.15",
     "nanoid": "^4.0.0",
     "rc-dock": "^3.2.10",
+    "rc-tree": "^5.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.33.1",
     "react-merge-refs": "^1.1.0",
     "react-scripts": "^5.0.1",
     "source-map-explorer": "^2.5.2",
+    "tree-model-improved": "^2.0.1",
     "typescript": "^4.7.4",
     "web-vitals": "^1.1.2",
     "y-protocols": "^1.0.5",
     "y-webrtc": "^10.2.3",
     "y-websocket": "^1.4.3",
     "yjs": "^13.5.39",
-    "zustand": "^4.0.0-rc.4",
-    "cytoscape-grid-guide": "^2.3.3"
+    "zustand": "^4.0.0-rc.4"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "watch-css": "less-watch-compiler src/assests/style src/assests/style",
-    "build-css": "lessc src/assets/less/index-light.less src/assets/css/rc-dock.css && lessc src/assets/less/index-dark.less src/assets/css/rc-dock-dark.css && lessc src/assets/less/index-all.less src/assets/css/rc-dock-all.css",
+    "watch-css": "less-watch-compiler src/assets/less src/assets/css index-all.less",
+    "build-css": "lessc src/assets/less/index-all.less src/assets/css/index-all.css",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -80,6 +84,7 @@
     "@babel/plugin-transform-react-jsx": "^7.18.6",
     "@testing-library/dom": "^8.16.0",
     "@types/cytoscape": "^3.19.6",
+    "@types/cytoscape-navigator": "^2.0.0",
     "@types/memoizee": "^0.4.8",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
@@ -89,6 +94,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
-    "tailwindcss": "^3.1.6"
+    "tailwindcss": "^3.1.6",
+    "use-resize-observer": "^9.0.2"
   }
 }
