--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@testing-library/user-event": "^14.3.0",
     "@types/cytoscape-edgehandles": "^4.0.0",
     "@types/jest": "^26.0.24",
-    "@types/node": "^18.0.6",
+    "@types/node": "^18.6.1",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "clsx": "^1.2.1",
@@ -35,7 +35,7 @@
     "memoizee": "^0.4.15",
     "nanoid": "^4.0.0",
     "rc-dock": "^3.2.10",
-    "rc-tree": "^5.6.5",
+    "rc-tree": "^5.6.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.33.1",
@@ -48,8 +48,8 @@
     "y-protocols": "^1.0.5",
     "y-webrtc": "^10.2.3",
     "y-websocket": "^1.4.3",
-    "yjs": "^13.5.39",
-    "zustand": "^4.0.0-rc.4"
+    "yjs": "^13.5.40",
+    "zustand": "^4.0.0"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
@@ -83,12 +83,12 @@
     "@babel/core": "^7.18.9",
     "@babel/plugin-transform-react-jsx": "^7.18.6",
     "@testing-library/dom": "^8.16.0",
-    "@types/cytoscape": "^3.19.6",
+    "@types/cytoscape": "^3.19.7",
     "@types/cytoscape-navigator": "^2.0.0",
     "@types/memoizee": "^0.4.8",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "^5.30.7",
-    "@typescript-eslint/parser": "^5.30.7",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
     "autoprefixer": "^10.4.7",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
