--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "less-watch-compiler": "^1.16.3",
     "memoizee": "^0.4.15",
     "nanoid": "^4.0.0",
+    "perfect-cursors": "^1.0.5",
     "rc-dock": "^3.2.10",
     "rc-tree": "^5.6.6",
     "react": "^18.2.0",
