--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "@floating-ui/react-dom-interactions": "^0.7.0",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
-    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.3.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/cytoscape-edgehandles": "^4.0.0",
     "@types/jest": "^26.0.24",
-    "@types/node": "^18.6.1",
-    "@types/react": "^18.0.15",
+    "@types/lodash.throttle": "^4.1.7",
+    "@types/node": "^18.7.14",
+    "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
     "clsx": "^1.2.1",
     "cytoscape": "^3.22.1",
@@ -26,31 +27,35 @@
     "cytoscape-layers": "^2.2.0",
     "cytoscape-layout-utilities": "^1.1.1",
     "cytoscape-navigator": "^2.0.2",
-    "dompurify": "^2.3.10",
-    "eslint": "^8.20.0",
+    "dompurify": "^2.4.0",
+    "eslint": "^8.23.0",
     "immer": "^9.0.15",
-    "jotai": "^1.7.6",
+    "jotai": "^1.8.2",
     "less": "^4.1.3",
     "less-watch-compiler": "^1.16.3",
+    "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
     "memoizee": "^0.4.15",
     "nanoid": "^4.0.0",
     "perfect-cursors": "^1.0.5",
-    "rc-dock": "^3.2.10",
+    "rc-dock": "^3.2.11",
     "rc-tree": "^5.6.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.33.1",
+    "react-hook-form": "^7.34.2",
     "react-merge-refs": "^1.1.0",
+    "react-native-event-listeners": "^1.0.7",
     "react-scripts": "^5.0.1",
     "source-map-explorer": "^2.5.2",
     "tree-model-improved": "^2.0.1",
-    "typescript": "^4.7.4",
+    "typescript": "^4.8.2",
     "web-vitals": "^1.1.2",
     "y-protocols": "^1.0.5",
+    "y-utility": "^0.1.2",
     "y-webrtc": "^10.2.3",
-    "y-websocket": "^1.4.3",
-    "yjs": "^13.5.40",
-    "zustand": "^4.0.0"
+    "y-websocket": "^1.4.4",
+    "yjs": "^13.5.41",
+    "zustand": "^4.1.1"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
@@ -81,21 +86,22 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.18.9",
-    "@babel/plugin-transform-react-jsx": "^7.18.6",
-    "@testing-library/dom": "^8.16.0",
+    "@babel/core": "^7.18.13",
+    "@babel/plugin-transform-react-jsx": "^7.18.10",
+    "@testing-library/dom": "^8.17.1",
     "@types/cytoscape": "^3.19.7",
     "@types/cytoscape-navigator": "^2.0.0",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/memoizee": "^0.4.8",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
-    "autoprefixer": "^10.4.7",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
+    "autoprefixer": "^10.4.8",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.16",
     "prettier": "^2.7.1",
-    "tailwindcss": "^3.1.6",
+    "tailwindcss": "^3.1.8",
     "use-resize-observer": "^9.0.2"
   }
 }
